<resources>
    <string name="app_name">Amuse</string>
    <string name="firstPage">首页</string>
    <string name="logo">logo</string>


    <string-array name="all">
        <item>全部</item>
        <item>KTV</item>
        <item>酒吧</item>
        <item>足疗</item>
        <item>演艺吧</item>
        <item>夜总会</item>
        <item>SPA养生馆</item>
        <item>商务会馆</item>
    </string-array>
    <string-array name="space">
        <item>由近及远</item>
        <item>由远及近</item>
    </string-array>
    <string-array name="evaluate">
        <item>好评</item>
        <item>中评</item>
        <item>差评</item>
    </string-array>
    <string-array name="volume">
        <item>销量高到低</item>
        <item>销量低到高</item>
    </string-array>

    <string name="lovePlay">同城爱玩</string>
    <string name="play_wine">酒水代理</string>
    <string name="wine_synopsis">简介</string>
    <string name="play_agent">仅代理商进入</string>
    <string name="play_recruit">招聘专区</string>
    <string name="play_JobWanted">招聘专区</string>
    <string name="play_place">场所</string>
    <string name="place_brief">商家简介</string>
    <string name="place_project">服务项目</string>
    <string name="place_customer">顾客评价</string>



    <string name="play_table">拼桌</string>
    <string name="play_cancel">取消</string>
    <string name="play_release">发布</string>
    <string name="play_name">请在此输入群聊名称</string>
    <string name="play_juvenile">少年，还在等什么，一起来嗨</string>
    <string name="play_prompt">建议写明事件地点，这样更容易拼桌成功</string>

    <string name="play_join">立即加入</string>
    <string name="play_snapshot">快拍</string>
    <string name="snapShort_follow">关注</string>
    <string name="snapShort_comment">评论</string>
    <string name="play_master">达人</string>
    <string name="play_recommend">热门推荐</string>

    <string name="play_nearby">附近在玩</string>
    <string name="play_bu">6bu6</string>

    <string name="preferential">优惠专区</string>
    <string name="who">我的</string>
    <string name="login">登陆</string>
    <string name="register_phone">请输入您的手机号</string>
    <string name="user_message">个人中心</string>


    <string name="all">全部</string>
    <string name="space">距离</string>
    <string name="evaluate">评价</string>
    <string name="volume">销量</string>



</resources>
