<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/play_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/play_bu"
            android:textColor="@color/first_text"
            android:textSize="30sp"
            android:layout_weight="0.94" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/play_tool">

        <RelativeLayout
            android:id="@+id/scroll_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/liner_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/first_text"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/r1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/drink_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/wine" />

                    <TextView
                        android:id="@+id/drink_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="28dp"
                        android:layout_toEndOf="@id/drink_img"
                        android:text="@string/play_wine"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/surrogate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/drink_text"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/drink_img"
                        android:text="@string/play_agent"
                        android:textSize="14sp" />
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/play_back" />

                <RelativeLayout
                    android:id="@+id/recruit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/recruit_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/area" />


                    <TextView
                        android:id="@+id/recruit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="28dp"
                        android:layout_toEndOf="@id/recruit_img"
                        android:text="@string/play_recruit"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/apply_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/recruit_text"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/recruit_img"
                        android:text="@string/play_JobWanted"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/liner_header"
                android:background="@color/play_back" />

            <LinearLayout
                android:id="@+id/liner_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:background="@color/first_text"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/liner_place"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/place_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/place" />

                    <TextView
                        android:id="@+id/place_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/play_place"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/liner_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/share_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/table" />

                    <TextView
                        android:id="@+id/share_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/play_table"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/liner_snapShort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/snapShort_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/snapshot" />

                    <TextView
                        android:id="@+id/snapShort_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/play_snapshot"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/liner_talent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/talent_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/logo"
                        android:src="@mipmap/master" />

                    <TextView
                        android:id="@+id/talent_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/play_master"
                        android:textColor="@color/txt"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/nearby"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/liner_all"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/play_nearby"
                android:textColor="@color/txt"
                android:textSize="20sp" />


            <ListView
                android:id="@+id/play_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nearby"
                android:divider="@color/play_back"
                android:dividerHeight="8dp" />

        </RelativeLayout>

    </ScrollView>


</LinearLayout>