<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/id_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <LinearLayout
        android:id="@+id/id_linerAll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="6dp">

        <LinearLayout
            android:id="@+id/first_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/first_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/first_w" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/first_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstPage"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/love_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/play_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/love_w" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/play_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lovePlay"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/preferential"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/preferential_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/preferential_w" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/preferential_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferential"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/who"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/who_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/who_w" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/who_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
