<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/details_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/logo"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/details_liner"
                android:layout_below="@id/details_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/details_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/text" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_below="@id/details_liner"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/play_back" />

            <LinearLayout
                android:id="@+id/details_liner1"
                android:layout_below="@id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <!--品牌-->
                <TextView
                    android:id="@+id/details_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
                <!--品种-->
                <TextView
                    android:id="@+id/details_varieties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />
                <!--联系人-->
                <TextView
                    android:id="@+id/details_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />
                <!--联系方式-->
                <TextView
                    android:id="@+id/details_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />
                <!--地址-->
                <TextView
                    android:id="@+id/details_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />
                <!--简介-->
                <TextView
                    android:id="@+id/details_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/wine_synopsis" />
                <!--内容-->
                <TextView
                    android:id="@+id/details_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name" />
            </LinearLayout>

            <ListView
                android:layout_below="@id/details_liner1"
                android:id="@+id/details_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>